<resources>
    <string name="app_name" translatable="false">NMedia!</string>
    <string name="custom_message" translatable="false">NMedia!</string>
    <string name="description_post_author_avatar" translatable="false" />
    <string name="author" translatable="false">Нетология. Университет интернет-профессий будущего</string>
    <string name="published" translatable="false">21 мая в 18:36</string>
    <string name="content" translatable="false">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="_10" translatable="false">10</string>
    <string name="_5" translatable="false">5</string>
    <string name="s5" translatable="false">5</string>
    <string name="_6" translatable="false">1k</string>
    <string name="edit_message">Edit message</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_new_post">User %1$s published new post</string>
    <string name="failed_refresh_news">Filed to refresh news feed</string>
    <string name="faile_delete_post">Failed to delete post</string>
    <string name="body_is_null">body is null</string>
    <string name="failed_save_post">Failed to save post</string>


    <string name="save">Save</string>

    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="network_error">Network error</string>
    <string name="retry">Retry</string>
    <string name="there_is_no_posts">There is no posts</string>
    <string name="error_loading">Error loading data</string>

</resources>