<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_spacing">

        <TextView
            android:id="@+id/author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/published"
            app:layout_constraintEnd_toEndOf="@+id/published"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/author" />

        <TextView
            android:id="@+id/published"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@+id/menu"
            app:layout_constraintStart_toEndOf="@id/avatar"
            app:layout_constraintTop_toBottomOf="@id/author"
            tools:text="@sample/posts.json/data/published" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_spacing"
            android:contentDescription="@string/description_post_menu"
            app:icon="@drawable/ic_more_vert_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="200dp"
            android:background="@color/secondary_text"
            android:backgroundTint="@color/secondary_text"
            android:backgroundTintMode="multiply"
            android:clickable="false"
            android:foregroundGravity="bottom"
            android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="avatar,published,menu" />

        <TextView
            android:id="@+id/content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:autoLink="web"
            app:layout_constraintBottom_toTopOf="@id/barrier1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:text="@string/content" />

        <ImageView
            android:id="@+id/avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_netology_48dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/like"
            style="@style/Widget.AppTheme.LikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:contentDescription="@string/description_post_like"
            app:icon="@drawable/ic_like_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier1"
            tools:checked="@sample/posts.json/data/likedByMe"
            tools:text="@sample/posts.json/data/likes" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share"
            style="@style/Widget.AppTheme.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_post_share"
            app:layout_constraintBottom_toBottomOf="@+id/like"
            app:layout_constraintStart_toEndOf="@+id/like"
            app:layout_constraintTop_toTopOf="@+id/like"
            tools:text="@sample/posts.json/data/likes"
            app:icon="@drawable/ic_share_24" />

        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="192dp"
            android:backgroundTint="#00000000"
            android:contentDescription="NULL"
            android:rotation="0"
            android:rotationX="0"
            android:rotationY="0"
            android:tint="@color/material_dynamic_neutral60"
            app:layout_constraintBottom_toBottomOf="@+id/share"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@id/barrier1"
            app:layout_constraintTop_toTopOf="@+id/share"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_views_24" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@color/divider"
            android:backgroundTint="@color/divider"
            android:visibility="visible"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="content" />

        <!--    <TextView-->
        <!--        android:id="@+id/likeCount"-->
        <!--        android:layout_width="36dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:textSize="16sp"-->
        <!--        app:layout_constraintBottom_toBottomOf="@+id/like"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/like"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/like"-->
        <!--        tools:text="999" />-->

        <!--    <TextView-->
        <!--        android:id="@+id/shareCount"-->
        <!--        android:layout_width="36dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:textSize="16sp"-->
        <!--        app:layout_constraintBottom_toBottomOf="@+id/share"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/share"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/share"-->
        <!--        tools:text="999" />-->

        <!--    <TextView-->
        <!--        android:id="@+id/vievCount"-->
        <!--        android:layout_width="36dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:layout_marginEnd="4dp"-->
        <!--        android:textSize="16sp"-->
        <!--        app:layout_constraintBottom_toBottomOf="@+id/view"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintTop_toTopOf="@+id/view"-->
        <!--        tools:text="999" />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>